第二版可以正常上传数据